--- a/testing/datas/calc.yaml
+++ b/testing/datas/calc.yaml
@@ -18,6 +18,14 @@ add:
     - [ -0.1,0.1,0 ]
     - [ 0.9,-0.1,0.8 ]
     - [ -0.9,-0.9,-1.8 ]
+    - [ " ", 4, "请输入数字" ]
+    - [ "qwe", 3, "请输入数字" ]
+    - [ 4, " ", "请输入数字" ]
+    - [ 3, "qwe", "请输入数字" ]
+    - [ 4, "汉字", "请输入数字" ]
+    - [ 3, "￥%", "请输入数字" ]
+    - [ "汉字 ", 4, "请输入数字" ]
+    - [ "￥%", 3, "请输入数字" ]
 
   myid:
     - "testadd1"
@@ -36,6 +44,14 @@ add:
     - "testadd14"
     - "testadd15"
     - "testadd16"
+    - "加数a空格"
+    - "加数a字母"
+    - "加数b空格"
+    - "加数b字母"
+    - "加数a汉字"
+    - "加数a特殊字符"
+    - "加数b汉字"
+    - "加数b特殊字符"
 
 div:
   datas:
@@ -53,6 +69,14 @@ div:
     - [ -1,-99999,0 ]
     - [ -99999,-99999,1 ]
     - [ -99999,1,-99999 ]
+    - [ " ", 4, "请输入数字" ]
+    - [ "qwe", 3, "请输入数字" ]
+    - [ 4, " ", "请输入数字" ]
+    - [ 3, "qwe", "请输入数字" ]
+    - [ 4, "汉字", "请输入数字" ]
+    - [ 3, "￥%", "请输入数字" ]
+    - [ "汉字 ", 4, "请输入数字" ]
+    - [ "￥%", 3, "请输入数字" ]
 
   myid:
     - "testdiv1"
@@ -67,3 +91,113 @@ div:
     - "testdiv10"
     - "testdiv11"
     - "testdiv12"
+    - "除数a空格"
+    - "除数a字母"
+    - "除数b空格"
+    - "除数b字母"
+    - "除数a汉字"
+    - "除数a特殊字符"
+    - "除数b汉字"
+    - "除数b特殊字符"
+
+sub:
+  datas:
+    - [ 0,1,-1 ]
+    - [ 99999,0,99999 ]
+    - [ 1,100,-99 ]
+    - [ 30,1,29 ]
+    - [ 1,99999,-99998 ]
+    - [ 99999,99999,0 ]
+    - [ -1,0,-1 ]
+    - [ 99999,-1,100000 ]
+    - [ -99999,-1,-99998 ]
+    - [ -99999,-99999,0 ]
+    - [ 0.1,0.1,0 ]
+    - [ 0.9,0.1,0.8 ]
+    - [ 0.9,0.9,0 ]
+    - [ -0.1,0.1,-0.2 ]
+    - [ 0.9,-0.1,1.0 ]
+    - [ -0.9,-0.9,0 ]
+    - [ " ", 4, "请输入数字" ]
+    - [ "qwe", 3, "请输入数字" ]
+    - [ 4, " ", "请输入数字" ]
+    - [ 3, "qwe", "请输入数字" ]
+    - [ 4, "汉字", "请输入数字" ]
+    - [ 3, "￥%", "请输入数字" ]
+    - [ "汉字 ", 4, "请输入数字" ]
+    - [ "￥%", 3, "请输入数字" ]
+
+  myid:
+    - "testsub1"
+    - "testsub2"
+    - "testsub3"
+    - "testsub4"
+    - "testsub5"
+    - "testsub6"
+    - "testsub7"
+    - "testsub8"
+    - "testsub9"
+    - "testsub10"
+    - "testsub11"
+    - "testsub12"
+    - "testsub13"
+    - "testsub14"
+    - "testsub15"
+    - "testsub16"
+    - "减数a空格"
+    - "减数a字母"
+    - "减数b空格"
+    - "减数b字母"
+    - "减数a汉字"
+    - "减数a特殊字符"
+    - "减数b汉字"
+    - "减数b特殊字符"
+
+mul:
+  datas:
+    - [ 0,1,0 ]
+    - [ 99999,0,0 ]
+    - [ 1,100,100 ]
+    - [ 30,1,30 ]
+    - [ 1,99999,99999 ]
+    - [ -1,0,0 ]
+    - [ 99999,-1,-99999 ]
+    - [ -99999,-1,99999 ]
+    - [ 0.1,0.1,0.01 ]
+    - [ 0.9,0.1,0.09 ]
+    - [ 0.9,0.9,0.81 ]
+    - [ -0.1,0.1,-0.01 ]
+    - [ 0.9,-0.1,-0.09 ]
+    - [ -0.9,-0.9,0.81 ]
+    - [ " ", 4, "请输入数字" ]
+    - [ "qwe", 3, "请输入数字" ]
+    - [ 4, " ", "请输入数字" ]
+    - [ 3, "qwe", "请输入数字" ]
+    - [ 4, "汉字", "请输入数字" ]
+    - [ 3, "￥%", "请输入数字" ]
+    - [ "汉字 ", 4, "请输入数字" ]
+    - [ "￥%", 3, "请输入数字" ]
+
+  myid:
+    - "testmul1"
+    - "testmul2"
+    - "testmul3"
+    - "testmul4"
+    - "testmul5"
+    - "testmul6"
+    - "testmul7"
+    - "testmul8"
+    - "testmul9"
+    - "testmul10"
+    - "testmul11"
+    - "testmul12"
+    - "testmul13"
+    - "testmul14"
+    - "乘数a空格"
+    - "乘数a字母"
+    - "乘数b空格"
+    - "乘数b字母"
+    - "乘数a汉字"
+    - "乘数a特殊字符"
+    - "乘数b汉字"
+    - "乘数b特殊字符"
